# claude-usage-widget

./: .gitignore  LICENSE  README.md  claude-usage-compact.sh  claude-usage-json.sh  claude-usage.sh  create_icons.py  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: launch.json
.superpowers/brainstorm/79251-1774202685/: .server-stopped  gauge-fill.html  icon-styles.html  sf-symbol-gauge.html
ClaudeUsageWidget/: project.yml
ClaudeUsageWidget/App/: App.entitlements  ClaudeUsageWidgetApp.swift  Info.plist  MenuBarNavigation.swift  UsageManager.swift
ClaudeUsageWidget/App/Views/: DebugLogView.swift  PopoverView.swift  ResetTimerView.swift  SettingsPanelView.swift  SettingsView.swift  TokenStatsView.swift  UsageBarView.swift
ClaudeUsageWidget/ClaudeUsageWidget.xcodeproj/: project.pbxproj
ClaudeUsageWidget/Shared/Models/: APIModels.swift  UsageSnapshot.swift  UsageTimelineEntry.swift
ClaudeUsageWidget/Shared/Services/: APIService.swift  DebugLogger.swift  KeychainService.swift  ServiceProtocols.swift  SharedContainerService.swift  StatsService.swift
ClaudeUsageWidget/Shared/Theme/: AnthropicColors.swift  MenuBarIconTier.swift
ClaudeUsageWidget/Tests/: APIModelsTests.swift  APIServiceTests.swift  KeychainServiceTests.swift  MenuBarIconTierTests.swift  MenuBarNavigationTests.swift  Mocks.swift  PaceTests.swift  PlaceholderTest.swift  SharedContainerServiceTests.swift  StatsServiceTests.swift  TimelineProviderTests.swift  UsageManagerTests.swift  UsageSnapshotTests.swift
ClaudeUsageWidget/Tests/Fixtures/: stats-cache.json
ClaudeUsageWidget/Widget/: ClaudeUsageWidgetBundle.swift  UsageTimelineProvider.swift  Widget.entitlements
docs/mockups/: pace-designs.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ResetTimer.tsx  TokenStats.tsx  UsageBar.tsx  UsageWidget.tsx
src/hooks/: useUsageData.ts
src/styles/: widget.css
(+13 files in other folders)
